@@ -3,10 +3,18 @@ fidoconfig 0.10
 (released on Mon May 22 14:58:56 CEST 2000)
 
 ----- cvs ci ------
+max (patch from Pavel Gulchouk):
+* set, if, else, elseif, ifdef, ifndef, endif
+* -def in link options
+* -Dvar=value in tparser parameters (example: "tparser -Dmodule=hpt")
+* davancedAreaFix token
+
+----- cvs ci ------
 Tue Jul 18 22:51:16 NOVST 2000
 max:
 * fgetsUntil0 modification
 
+----- cvs ci ------
 Sun Jul  9 20:01:16 NOVST 2000
 max:
 * added ignoreSeen
